# graphviz-poc

./: LICENSE.md  README.md
crates/bevy-graph-view/: Cargo.toml  README.md
crates/bevy-graph-view/examples/: desktop.rs
crates/bevy-graph-view/src/: assets.rs  components.rs  events.rs  graph.rs  lib.rs  resources.rs  utils.rs
crates/i7n/: Cargo.toml
crates/i7n/src/: claims-from-following.graphql  get-signals.graphql  graphql.rs  main.rs
crates/intuition/: Cargo.toml
crates/intuition/src/: intuition.rs  main.rs
crates/memgraph/: Cargo.toml
crates/memgraph/src/: main.rs  memgraph.rs
mobile/: Cargo.toml  Makefile  README.md  package.json
mobile-custom-rn/: index.js  package-lock.json  package.json  readme.md
mobile-custom-rn/ios/: Cargo.toml  Podfile
mobile-custom-rn/ios/intuition_mobile.xcodeproj/: project.pbxproj
mobile-custom-rn/ios/intuition_mobile.xcodeproj/xcshareddata/xcschemes/: intuition_mobile.xcscheme
mobile-custom-rn/ios/intuition_mobile.xcworkspace/: contents.xcworkspacedata
mobile-custom-rn/ios/intuition_mobile.xcworkspace/xcuserdata/simonas.xcuserdatad/: UserInterfaceState.xcuserstate
mobile-custom-rn/ios/ios-src/: HelloWorldViewController.m  Info.plist
mobile-custom-rn/ios/src/: lib.rs
mobile/intuition_mobile.xcodeproj/: project.pbxproj
mobile/ios-src/: HelloWorldViewController.h  HelloWorldViewController.m
mobile/src/: lib.rs
web-vite/: package.json  pnpm-lock.yaml  vite.config.ts
web-vite/src/: App.tsx
web/app/routes/app+/: _index.tsx
