[package]
name = "intuition_mobile"
version = "0.1.0"
edition = "2021"
description = "Example for building an iOS or Android app with Bevy"
publish = false
license = "MIT OR Apache-2.0"

[lib]
name = "intuition_mobile"
crate-type = ["staticlib", "cdylib"]

[dependencies]
bevy = "0.13.2" 
bevy-graph-view = { path = "../crates/bevy-graph-view" }
raw_window_handle = { package = "raw-window-handle", version = "0.6" }
objc = "0.2.7"

[package.metadata.android]

package = "systems.intuition.mobile"
apk_name = "intuition"
assets = "./assets"
resources = "./assets/android-res"
# This strips debug symbols from the shared libraries, drastically reducing APK size. If you need them, remove the option.
strip = "strip"
build_targets = ["aarch64-linux-android", "armv7-linux-androideabi"]

[package.metadata.android.sdk]
target_sdk_version = 31

[package.metadata.android.application]
icon = "@mipmap/ic_launcher"
label = "Intuition"

