[package]
name = "i7n"
version = "0.1.0"
edition = "2021"


[dependencies]
rand="*"
forceatlas2 = { git = "https://github.com/simonas-notcat/forceatlas2-rs.git", branch = "stable-fix" } 
bevy-graph-view = { path = "../bevy-graph-view/" }
bevy_panorbit_camera = { version="0.17", features = ["bevy_egui"] }
bevy_egui = { version = "0.25", default-features = false, features = ["render", "default_fonts"] }
bevy_mod_reqwest = { git = "https://github.com/simonas-notcat/bevy_mod_reqwest.git", branch = "fix-macos"}
serde = "1.0.197"
serde_json = "1.0.114"
egui_extras = { version = "0.26.2", features = [ "all_loaders" ] }
image = { version = "0.24", features = ["jpeg", "png"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }

[dependencies.bevy]
version = "0.13.2"
default-features = false
features = [
  "bevy_asset",         # Assets management
  "bevy_scene",         # Scenes management
  "bevy_winit",         # Window management (cross-platform Winit backend)
  "bevy_render",        # Rendering framework core
  "bevy_core_pipeline", # Common rendering abstractions
  "bevy_pbr",           # 3D (physically-based) rendering
  "animation",          # Animation support
  "tonemapping_luts",   # Support different camera Tonemapping modes (enables KTX2+zstd)
  "webgl2",                # Web: use WebGL2 instead of WebGPU
]

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = true
debug = false
